name: minion-hs
version: 0.1.0.0
synopsis: A Haskell binding to constraint solver Minion.
description: A Haskell binding to constraint solver Minion.
license: AllRightsReserved
author: Ozgur Akgun
maintainer: ozgurakgun@gmail.com
category: Language
build-type: Simple
cabal-version: >=1.8

library
  hs-source-dirs: src
  exposed-modules: Language.Minion
                 , Language.Minion.Definition
                 , Language.Minion.Definition.Prim
                 , Language.Minion.Definition.Constraint
                 , Language.Minion.Definition.Model
                 , Language.Minion.Builder
                 , Language.Minion.Print
                 , Language.Minion.Run
                 , Language.Minion.Examples
  build-depends: base
               , containers         >= 0.5.5.1
               , data-default       >= 0.5.3
               , mtl                >= 2.2.1
               , pretty             >= 1.1.1.1
               -- 1.6.7, because of the stderr handling fix
               , shelly             >= 1.6.7
               , text               >= 1.2.0.6
  ghc-options: -Wall

